agrego el tercer ejemplo de practica

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -40,7 +40,7 @@
         <p><strong><a href="./heladeria.html" target="_blank">Heladeria</a></strong>: Crear un programa que pida al usuario ingresar, por separado, tres gustos de helado, y luego muestre un mensaje que diga, por ejemplo, "Aquí tiene su helado de chocolate, dulce de leche y menta granizada".</p>
       </li>
       <li>
-        <p><strong> Datos personales</strong>:Crear un programa que pida al usuario ingresar, por separado, nombre, apellido, edad, nacionalidad, documento, y muestre luego un mensaje que diga: "Nuevo usuario agregado al sistema:" y liste todos los datos juntos.</p>
+        <p><strong><a href="./datos-personales.html" target="_blank">Datos Personales</a></strong>:Crear un programa que pida al usuario ingresar, por separado, nombre, apellido, edad, nacionalidad, documento, y muestre luego un mensaje que diga: "Nuevo usuario agregado al sistema:" y liste todos los datos juntos.</p>
       </li>
       <li>
         <p><strong>Lista de reproducción</strong>:Crear un programa que pida al usuario ingresar, por separado, el nombre de una playlist y el título de tres canciones, y al finalizar se muestre un mensaje que diga, p. ej.: "Se ha creado la playlist 'Hits de los 80s' con las canciones 'Africa', 'Maniac', 'Final Countdown'".</p>
