--- a/clase10/index.html
+++ b/clase10/index.html
@@ -46,7 +46,7 @@
         <p><strong><a href="./lista-reproduccion.html" target="_blank">Lista Reproduccion</a></strong>:Crear un programa que pida al usuario ingresar, por separado, el nombre de una playlist y el título de tres canciones, y al finalizar se muestre un mensaje que diga, p. ej.: "Se ha creado la playlist 'Hits de los 80s' con las canciones 'Africa', 'Maniac', 'Final Countdown'".</p>
       </li>
       <li>
-        <p><strong>Dirección completa</strong>: Crear un programa que pida al usuario ingresar, por separado, la calle, el número, el departamento, el código postal, la ciudad y el país, y muestre un mensaje con toda la dirección completa, p.ej.: "La dirección que ha ingresado es: Calle Falsa 123 3C, 1414, CABA, Argentina".</p>
+        <p><strong><a href="./direccion.html" target="_blank">Dirección Completa</a></strong>: Crear un programa que pida al usuario ingresar, por separado, la calle, el número, el departamento, el código postal, la ciudad y el país, y muestre un mensaje con toda la dirección completa, p.ej.: "La dirección que ha ingresado es: Calle Falsa 123 3C, 1414, CABA, Argentina".</p>
       </li>
       <li>
         <p><strong>Años perro</strong>: Crear un programa que pida ingresar una edad y devuelva el equivalente de esas edad en años perro.</p>
