agrego el ejercicio de pasar de minutos a segundos

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -49,13 +49,14 @@
         <p><strong><a href="./direccion.html" target="_blank">Dirección Completa</a></strong>: Crear un programa que pida al usuario ingresar, por separado, la calle, el número, el departamento, el código postal, la ciudad y el país, y muestre un mensaje con toda la dirección completa, p.ej.: "La dirección que ha ingresado es: Calle Falsa 123 3C, 1414, CABA, Argentina".</p>
       </li>
       <li>
-        <p><strong>Años perro</strong>: Crear un programa que pida ingresar una edad y devuelva el equivalente de esas edad en años perro.</p>
+        <p><strong><a href="./anios-perro.html" target="_blank">Años perro</a></strong>: Crear un programa que pida ingresar una edad y devuelva el equivalente de esas edad en años perro.</p>
       </li>
       <li>
-        <p><strong>Minutos a segundos</strong>:  Crear un programa que pida ingresar una cantidad en minutos mediante un y muestre un mensaje con el resultado de la conversión en segundos.</p>
+        <p><strong><a href="./minuto_a_segundo.html" target="_blank">Minutos a segundos</a></strong>:  Crear un programa que pida ingresar una cantidad en minutos mediante un y muestre un mensaje con el resultado de la conversión en segundos.</p>
       </li>
       <li>
-        <p><strong>Días a segundos</strong>: Crear un programa que pida ingresar una cantidad de días y muestre un mensaje con el resultado de la conversión en segundos.</p>
+        <p>
+          <strong>Días a segundos</strong>: Crear un programa que pida ingresar una cantidad de días y muestre un mensaje con el resultado de la conversión en segundos.</p>
       </li>
       <li>
         <p><strong>Kilómetros a millas</strong>: Crear un programa que pida ingresar una cantidad de kilómetros y muestre un mensaje con el resultado de la conversión en millas.</p>
