agrego el html de kilometros a millas

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -55,8 +55,7 @@
         <p><strong><a href="./minuto_a_segundo.html" target="_blank">Minutos a segundos</a></strong>:  Crear un programa que pida ingresar una cantidad en minutos mediante un y muestre un mensaje con el resultado de la conversión en segundos.</p>
       </li>
       <li>
-        <p>
-          <strong>Días a segundos</strong>: Crear un programa que pida ingresar una cantidad de días y muestre un mensaje con el resultado de la conversión en segundos.</p>
+        <p><strong><a href="./dias-a-segundos.html" target="_blank">Dias a segundos</a></strong>: Crear un programa que pida ingresar una cantidad de días y muestre un mensaje con el resultado de la conversión en segundos.</p>
       </li>
       <li>
         <p><strong>Kilómetros a millas</strong>: Crear un programa que pida ingresar una cantidad de kilómetros y muestre un mensaje con el resultado de la conversión en millas.</p>
