--- a/clase10/index.html
+++ b/clase10/index.html
@@ -58,7 +58,7 @@
         <p><strong><a href="./dias-a-segundos.html" target="_blank">Dias a segundos</a></strong>: Crear un programa que pida ingresar una cantidad de días y muestre un mensaje con el resultado de la conversión en segundos.</p>
       </li>
       <li>
-        <p><strong><a href="./kilometros-a-millas.html" target="_blank">KIlometros a millass</a></strong>: Crear un programa que pida ingresar una cantidad de kilómetros y muestre un mensaje con el resultado de la conversión en millas.</p>
+        <p><strong><a href="./kilometros-a-millas.html" target="_blank">KIlometros a millas</a></strong>: Crear un programa que pida ingresar una cantidad de kilómetros y muestre un mensaje con el resultado de la conversión en millas.</p>
       </li>
       <li>
         <p><strong>Área de un triangulo</strong>: Crear un programa que pida al usuario ingresar el valor de la base y el valor de la altura de un triangulo, calcular su área y mostrarlo en un mensaje.</p>
