--- a/clase10/area-triangulo.html
+++ b/clase10/area-triangulo.html
@@ -37,6 +37,6 @@
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
-  <script src="./js/kilometros-a-millas.js"></script>
+  <script src="./js/area-triangulo.js"></script>
 </body>
 </html>
