--- a/clase10/datos-personales.html
+++ b/clase10/datos-personales.html
@@ -25,12 +25,11 @@
 <body>
    <!-- HEADER -->
    <header class="header header-clase10">
-    <h1>Bienvenidos a mis practicas de la decima clase</h1>
+    <h1>Datos personales</h1>
   </header>
   <!-- MAIN -->
   <main class="main-clase10 saludo">
-    <h2>Datos Personales <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
-    <h3>Consigna:</h3>
+    <h2>Consigna  <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
     <p>Crear un programa que pida al usuario ingresar, por separado, nombre, apellido, edad, nacionalidad, documento, y muestre luego un mensaje que diga: "Nuevo usuario agregado al sistema:" y liste todos los datos juntos.</p>
   </main>
   <!-- FOOTER -->
