--- a/clase10/saludos.html
+++ b/clase10/saludos.html
@@ -25,12 +25,11 @@
 <body>
    <!-- HEADER -->
    <header class="header header-clase10">
-    <h1>Bienvenidos a mis practicas de la decima clase</h1>
+    <h1>Saludos</h1>
   </header>
   <!-- MAIN -->
   <main class="main-clase10 saludo">
-    <h2>Saludos <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
-    <h3>Consigna:</h3>
+    <h2>Consigna <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
     <p>Crear un programa que pida al usuario ingresar un nombre y apellido por separado.</p> 
     <p>Luego muestre un mensaje que diga, "Hola {nombre} {apellido}, bienvenida a Ada".</p>
   </main>
