agrego link a calculo de perimetro de rectangulo

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -61,10 +61,10 @@
         <p><strong><a href="./kilometros-a-millas.html" target="_blank">Kilometros a millas</a></strong>: Crear un programa que pida ingresar una cantidad de kilómetros y muestre un mensaje con el resultado de la conversión en millas.</p>
       </li>
       <li>
-        <p><strong><a href="./area-triangulo.html" target="_blank">Área de un triangulo</a>: Crear un programa que pida al usuario ingresar el valor de la base y el valor de la altura de un triangulo, calcular su área y mostrarlo en un mensaje.</p>
+        <p><strong><a href="./area-triangulo.html" target="_blank">Área de un triangulo</a></strong>: Crear un programa que pida al usuario ingresar el valor de la base y el valor de la altura de un triangulo, calcular su área y mostrarlo en un mensaje.</p>
       </li>
       <li>
-        <p><strong>Perímetro de un rectángulo</strong>: Crear un programa que pida al usuario ingresar el valor de la altura y el valor del ancho de un rectángulo, calcular su perímetro y mostrarlo en un mensaje.</p>
+        <p><strong><a href="./perimetro-rectangulo.html" target="_blank">Perímetro rectángulo</a></strong>: Crear un programa que pida al usuario ingresar el valor de la altura y el valor del ancho de un rectángulo, calcular su perímetro y mostrarlo en un mensaje.</p>
       </li>
       <li>
         <p><strong>Porcentaje</strong>: Crear un programa que pida al usuario ingresar un número, y luego el porcentaje que se desea obtener del mismo. Devolver un mensaje muestre el porcentaje de dicho número.</p>
