agrego html y lin k para ejercicio de porcentaje

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -67,7 +67,7 @@
         <p><strong><a href="./perimetro-rectangulo.html" target="_blank">Perímetro rectángulo</a></strong>: Crear un programa que pida al usuario ingresar el valor de la altura y el valor del ancho de un rectángulo, calcular su perímetro y mostrarlo en un mensaje.</p>
       </li>
       <li>
-        <p><strong>Porcentaje</strong>: Crear un programa que pida al usuario ingresar un número, y luego el porcentaje que se desea obtener del mismo. Devolver un mensaje muestre el porcentaje de dicho número.</p>
+        <p><strong><a href="./porcentaje.html" target="_blank">Porcentaje</a></strong>: Crear un programa que pida al usuario ingresar un número, y luego el porcentaje que se desea obtener del mismo. Devolver un mensaje muestre el porcentaje de dicho número.</p>
       </li>
       <li>
         <p><strong>Duración vuelo</strong>: Crear un programa que pida al usuario ingresar, por separado, 3 destinos de las escalas de un vuelo, y la duración de cada uno de ellos. Al final debe mostrar un mensaje que liste todas </p>
