corrijo el link

--- a/clase02/index.html
+++ b/clase02/index.html
@@ -86,7 +86,7 @@
     </section>
     <!-- ALINEACION -->
     <section id="alineacion">
-      <a href="./alineaciono.html" target="_blank" rel="noopener noreferrer">Alineacion</a>
+      <a href="./alineacion.html" target="_blank" rel="noopener noreferrer">Alineacion</a>
     </section>
     <!-- FRUTAS -->
     <section id="frutas">
