--- a/clase02/index.html
+++ b/clase02/index.html
@@ -98,7 +98,7 @@
     </section>
     <!-- TERMOMETRO -->
     <section id="presentacion-modo-oscruro">
-      <a href="./presentacion-modo-oscuro.html" target="_blank" rel="noopener noreferrer">Presentacion modo oscuro</a>
+      <a href="./termometro.html" target="_blank" rel="noopener noreferrer">Termometro</a>
     </section>
     <!-- CUENTA BANCARIA-->
     <section id="cuenta-bancaria">
