--- a/clase10/porcentaje.html
+++ b/clase10/porcentaje.html
@@ -36,6 +36,6 @@
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
-  <script src="./js/perimetro-rectangulo.js"></script>
+  <script src="./js/porcentaje.js"></script>
 </body>
 </html>
