agrego algunos favicones

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -7,7 +7,7 @@
   <title>Clase 10 | JS</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaScript. Vean la práctica de la decima clase: JavaScript.">
-  <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/color/48/000000/javascript--v1.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
@@ -15,9 +15,11 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaSCript. Vean la práctica de la decima clase: JavaSCript.">
   <meta property="og:image" name="twitter:image"
-    content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
+    content="https://img.icons8.com/color/48/000000/javascript--v1.png">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase10/index.html">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/javascript--v1.png" type="image/x-icon">  
   <!-- CSS GENERAL -->
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="./style.css">
@@ -70,7 +72,7 @@
         <p><strong><a href="./porcentaje.html" target="_blank">Porcentaje</a></strong>: Crear un programa que pida al usuario ingresar un número, y luego el porcentaje que se desea obtener del mismo. Devolver un mensaje muestre el porcentaje de dicho número.</p>
       </li>
       <li>
-        <p><strong>Duración vuelo</strong>: Crear un programa que pida al usuario ingresar, por separado, 3 destinos de las escalas de un vuelo, y la duración de cada uno de ellos. Al final debe mostrar un mensaje que liste todas las escalas con su duración y la duración total del vuelo.</p>
+        <p><strong><a href="./duracion-vuelo.html" target="_blank">Duración vuelo</a></strong>: Crear un programa que pida al usuario ingresar, por separado, 3 destinos de las escalas de un vuelo, y la duración de cada uno de ellos. Al final debe mostrar un mensaje que liste todas las escalas con su duración y la duración total del vuelo.</p>
       </li>
       <li>
         <p><strong>Incremento</strong>: Crear un programa que pida ingresar una número de partida y una cantidad a ir incrementando y mostrar cinco mensajes seguidos que muestren el número del mensaje y el total incrementado hasta el momento (p. ej.: empezando con 5 e incrementando 5, "Incremento 1) Total: 10", "Incremento 2) Total: 15", "Incremento 3) Total: 20", etc.).</p>
