--- a/clase10/dias-a-segundos.html
+++ b/clase10/dias-a-segundos.html
@@ -7,7 +7,7 @@
   <title>Clase 10 | JS: Dias a segundos</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaScript. Vean la práctica de la decima clase: JavaScript.">
-  <link rel="apple-touch-icon" href="https://img.icons8.com/external-becris-lineal-color-becris/64/000000/external-programming-data-science-becris-lineal-color-becris.png">
+  <link rel="apple-touch-icon" href="https://img.icons8.com/arcade/68/000000/experimental-clock-arcade.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
@@ -15,9 +15,11 @@
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaSCript. Vean la práctica de la decima clase: JavaSCript.">
   <meta property="og:image" name="twitter:image"
-    content="https://img.icons8.com/ios/50/000000/laptop-coding.png">
+    content="https://img.icons8.com/arcade/68/000000/experimental-clock-arcade.png">
   <meta property="og:url" name="twitter:url"
     content="https://eugenia1984.github.io/ada-introduccion-frontend/clase10/dias-a-segundos.html">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="https://img.icons8.com/arcade/34/000000/experimental-clock-arcade.png" type="image/x-icon"> 
   <!-- CSS GENERAL -->
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="./style.css">
