agrego la consigna de otro ejercicio

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -72,6 +72,9 @@
         <p><strong><a href="./porcentaje.html" target="_blank">Porcentaje</a></strong>: Crear un programa que pida al usuario ingresar un número, y luego el porcentaje que se desea obtener del mismo. Devolver un mensaje muestre el porcentaje de dicho número.</p>
       </li>
       <li>
+        <p><strong>Tiempo de viaje</strong>: Crear un programa que pida al usuario la distancia de su recorrido y mostrar en un mensaje cuánto tiempo tardaría en completar el recorrido en distintos medios de transporte, definiendo de antemano distintas velocidades para distintos medios de transporte (p. ej.: a pie: 5 km/hora, bici 10km/hora, etc.).</p>
+      </li>
+      <li>
         <p><strong><a href="./duracion-vuelo.html" target="_blank">Duración vuelo</a></strong>: Crear un programa que pida al usuario ingresar, por separado, 3 destinos de las escalas de un vuelo, y la duración de cada uno de ellos. Al final debe mostrar un mensaje que liste todas las escalas con su duración y la duración total del vuelo.</p>
       </li>
       <li>
