agrego el ejercicio de tiempo de viaje

--- a/clase10/tiempo-viaje.html
+++ b/clase10/tiempo-viaje.html
@@ -38,6 +38,6 @@
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
-  <script src="./js/duracion-vuelo.js"></script>
+  <script src="./js/tiempo-viaje.js"></script>
 </body>
 </html>
