agrego archivos para hacer ejercicio de incremento

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -78,7 +78,7 @@
         <p><strong><a href="./duracion-vuelo.html" target="_blank">Duración vuelo</a></strong>: Crear un programa que pida al usuario ingresar, por separado, 3 destinos de las escalas de un vuelo, y la duración de cada uno de ellos. Al final debe mostrar un mensaje que liste todas las escalas con su duración y la duración total del vuelo.</p>
       </li>
       <li>
-        <p><strong>Incremento</strong>: Crear un programa que pida ingresar una número de partida y una cantidad a ir incrementando y mostrar cinco mensajes seguidos que muestren el número del mensaje y el total incrementado hasta el momento (p. ej.: empezando con 5 e incrementando 5, "Incremento 1) Total: 10", "Incremento 2) Total: 15", "Incremento 3) Total: 20", etc.).</p>
+        <p><strong><a href="./incremento.html" target="_blank">Incremento</a></strong>: Crear un programa que pida ingresar una número de partida y una cantidad a ir incrementando y mostrar cinco mensajes seguidos que muestren el número del mensaje y el total incrementado hasta el momento (p. ej.: empezando con 5 e incrementando 5, "Incremento 1) Total: 10", "Incremento 2) Total: 15", "Incremento 3) Total: 20", etc.).</p>
       </li>
       <li>
         <p><strong>Celsius a Fahrenheit</strong>: Crear un programa que pida ingresar una cantidad de grados Celsius y muestre un mensaje con el resultado de la conversión a grados Fahrenheit.
