--- a/clase10/index.html
+++ b/clase10/index.html
@@ -81,8 +81,7 @@
         <p><strong><a href="./incremento.html" target="_blank">Incremento</a></strong>: Crear un programa que pida ingresar una número de partida y una cantidad a ir incrementando y mostrar cinco mensajes seguidos que muestren el número del mensaje y el total incrementado hasta el momento (p. ej.: empezando con 5 e incrementando 5, "Incremento 1) Total: 10", "Incremento 2) Total: 15", "Incremento 3) Total: 20", etc.).</p>
       </li>
       <li>
-        <p><strong>Celsius a Fahrenheit</strong>: Crear un programa que pida ingresar una cantidad de grados Celsius y muestre un mensaje con el resultado de la conversión a grados Fahrenheit.
-        </p>
+        <p><strong><a href="./c-a-f.html" target="_blank">Celsius a Fahrenheit</a></strong>: Crear un programa que pida ingresar una cantidad de grados Celsius y muestre un mensaje con el resultado de la conversión a grados Fahrenheit.</p>
       </li>
       <li>
         <p><strong>Múltiplos</strong>: Crear un programa que pida al usuario un número, luego otro y mostrar en un mensaje si el primer valor es múltiplo del segundo. INVESTIGAR EL OPERADOR MÓDULO O DE RESTO % PARA HACERLO</p>
