agrego link a ejercicio de multiplos

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -84,7 +84,7 @@
         <p><strong><a href="./c-a-f.html" target="_blank">Celsius a Fahrenheit</a></strong>: Crear un programa que pida ingresar una cantidad de grados Celsius y muestre un mensaje con el resultado de la conversión a grados Fahrenheit.</p>
       </li>
       <li>
-        <p><strong>Múltiplos</strong>: Crear un programa que pida al usuario un número, luego otro y mostrar en un mensaje si el primer valor es múltiplo del segundo. INVESTIGAR EL OPERADOR MÓDULO O DE RESTO % PARA HACERLO</p>
+        <p><strong><a href="./multiplos.html" target="_blank">Múltiplos</a></strong>: Crear un programa que pida al usuario un número, luego otro y mostrar en un mensaje si el primer valor es múltiplo del segundo. INVESTIGAR EL OPERADOR MÓDULO O DE RESTO % PARA HACERLO</p>
       </li>
       <li>
         <p><strong>Segundos a horas, minutos y segundos</strong>: Crear un programa que pida ingresar una cantidad en segundos y muestre un mensaje con el resultado de la conversión en horas, minutos y segundos que corresponde a esa cantidad (p.ej. 3602 segundos = 1 hora 2 segundos). (Usar operador módulo)</p>
@@ -103,7 +103,6 @@
       </li>
     </ul>
   </main>
-
   <!-- FOOTER -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
