--- a/clase10/multiplos.html
+++ b/clase10/multiplos.html
@@ -39,6 +39,6 @@
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
-  <script src="./js/c-a-f.js"></script>
+  <script src="./js/multiplos.js"></script>
 </body>
 </html>
