--- a/clase10/index.html
+++ b/clase10/index.html
@@ -87,7 +87,7 @@
         <p><strong><a href="./multiplos.html" target="_blank">Múltiplos</a></strong>: Crear un programa que pida al usuario un número, luego otro y mostrar en un mensaje si el primer valor es múltiplo del segundo. INVESTIGAR EL OPERADOR MÓDULO O DE RESTO % PARA HACERLO</p>
       </li>
       <li>
-        <p><strong>Segundos a horas, minutos y segundos</strong>: Crear un programa que pida ingresar una cantidad en segundos y muestre un mensaje con el resultado de la conversión en horas, minutos y segundos que corresponde a esa cantidad (p.ej. 3602 segundos = 1 hora 2 segundos). (Usar operador módulo)</p>
+        <p><strong>Segundos a horas, minutos y segundos</strong>: Crear un programa que pida ingresar una cantidad en segundos y muestre un mensaje con el resultado de la conversión en horas, minutos y segundos que corresponde a esa cantidad (p.ej. 3602 segundos = 1 hora 2 segundos). (Usar operador módulo).</p>
       </li>
       <li>
         <p><strong>Cantidad de caracteres</strong>: Crear un programa que pida al usuario ingresar un texto y muestre un mensaje con la cantidad de caracteres que tiene ese texto. INVESTIGAR CÓMO HACERLO</p>
