--- a/clase10/index.html
+++ b/clase10/index.html
@@ -90,7 +90,7 @@
         <p><strong><a href="./convertir-segundos.html" target="_blank">Segundos a horas, minutos y segundos</a></strong>: Crear un programa que pida ingresar una cantidad en segundos y muestre un mensaje con el resultado de la conversión en horas, minutos y segundos que corresponde a esa cantidad (p.ej. 3602 segundos = 1 hora 2 segundos). (Usar operador módulo).</p>
       </li>
       <li>
-        <p><strong>Cantidad de caracteres</strong>: Crear un programa que pida al usuario ingresar un texto y muestre un mensaje con la cantidad de caracteres que tiene ese texto. INVESTIGAR CÓMO HACERLO</p>
+        <p><strong><a href="./cantidad-caracteres.html" target="_blank">Cantidad de caracteres</a></strong>: Crear un programa que pida al usuario ingresar un texto y muestre un mensaje con la cantidad de caracteres que tiene ese texto. INVESTIGAR CÓMO HACERLO</p>
       </li>
       <li>
         <p><strong>Cantidad de huéspedes</strong>: Crear un programa que pida al usuario ingresar, de a uno por vez, cuántas habitaciones tiene un hotel para 2, 3 y 4 personas, y muestre el máximo de huéspedes que puede albergar.</p>
