agrego el link al ejercicio de contar personas

--- a/clase10/index.html
+++ b/clase10/index.html
@@ -93,7 +93,7 @@
         <p><strong><a href="./cantidad-caracteres.html" target="_blank">Cantidad de caracteres</a></strong>: Crear un programa que pida al usuario ingresar un texto y muestre un mensaje con la cantidad de caracteres que tiene ese texto. INVESTIGAR CÓMO HACERLO</p>
       </li>
       <li>
-        <p><strong>Cantidad de huéspedes</strong>: Crear un programa que pida al usuario ingresar, de a uno por vez, cuántas habitaciones tiene un hotel para 2, 3 y 4 personas, y muestre el máximo de huéspedes que puede albergar.</p>
+        <p><strong><a href="./cantidad-huespedes.html" target="_blank">Cantidad de huéspedes</a></strong>: Crear un programa que pida al usuario ingresar, de a uno por vez, cuántas habitaciones tiene un hotel para 2, 3 y 4 personas, y muestre el máximo de huéspedes que puede albergar.</p>
       </li>
       <li>
         <p><strong>Calculador gastos</strong>: Crear un programa que pida al usuario cuanto dinero disponible tiene, y vaya preguntando cuánto tiene que pagar por cada servicio, pidiendo el nombre del servicio y el monto a pagar, uno a la vez. Cada vez que pide ingresar un nuevo servicio, el mensaje debe mostrar cuántos servicios quedan por ingresar, utilizando una variable, y mostrar cuánto dinero disponible queda. Al final debe mostrar una lista con todos los servicios a pagar y el monto de cada uno, además del dinero disponible que le queda. Hacerlo con 3 servicios.</p>
