agrego la parte de javascript para la cantidad de huespedes

--- a/clase10/cantidad-huespedes.html
+++ b/clase10/cantidad-huespedes.html
@@ -32,7 +32,7 @@
   <!-- MAIN -->
   <main class="main-clase10 saludo">
     <h2>Consigna <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
-    <p>Crear un programa que pida al usuario ingresar, de a uno por vez, cuántas habitaciones tiene un hotel para 2, 3 y 4 personas, y muestre el máximo de huéspedes que puede albergar..</p>
+    <p>Crear un programa que pida al usuario ingresar, de a uno por vez, cuántas habitaciones tiene un hotel para 2, 3 y 4 personas, y muestre el máximo de huéspedes que puede albergar.</p>
   </main>
   <!-- FOOTER -->
   <footer>
