--- a/clase10/orden-compra.html
+++ b/clase10/orden-compra.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clase 10 | JS: Calculador de gastos</title>
+  <title>Clase 10 | JS: Orden de compra</title>
   <meta name="description"
   content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaScript. Vean la práctica de la decima clase: JavaScript.">
   <link rel="apple-touch-icon" href="https://img.icons8.com/dusk/68/000000/apple-calculator.png">
   <meta name="theme-color" content="rgb(232, 229, 132)">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
-  <meta property="og:title" name="twitter:title" content="Clase 10 | JS: Calculador de gastos">
+  <meta property="og:title" name="twitter:title" content="Clase 10 | JS: Orden de compra">
   <meta property="og:description" name="twitter:description"
     content="Hola bienvenidos a mi practica del curso de Ada Introduccion Front End, viendo HTML, CSS y JavaSCript. Vean la práctica de la decima clase: JavaSCript.">
   <meta property="og:image" name="twitter:image"
     content="https://img.icons8.com/dusk/68/000000/apple-calculator.png">
   <meta property="og:url" name="twitter:url"
-    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase10/cantidad-huespedes.html">
+    content="https://eugenia1984.github.io/ada-introduccion-frontend/clase10/orden-compra.html">
   <!-- FAVICON -->
   <link rel="shortcut icon" href="https://img.icons8.com/dusk/34/000000/gastos.png" type="image/x-icon">  
   <!-- CSS GENERAL -->
@@ -27,20 +27,20 @@
 <body>
    <!-- HEADER -->
    <header class="header header-clase10">
-    <h1>Calculador de gastos</h1>
+    <h1>Orden de compra</h1>
   </header>
   <!-- MAIN -->
   <main class="main-clase10 saludo">
     <h2>Consigna <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
-    <p>Crear un programa que pida al usuario cuanto dinero disponible tiene, y vaya preguntando cuánto tiene que pagar por cada servicio, pidiendo el nombre del servicio y el monto a pagar, uno a la vez.</p>
-    <p>Cada vez que pide ingresar un nuevo servicio, el mensaje debe mostrar cuántos servicios quedan por ingresar, utilizando una variable, y mostrar cuánto dinero disponible queda.</p>
-    <p>Al final debe mostrar una lista con todos los servicios a pagar y el monto de cada uno, además del dinero disponible que le queda.</p>
-    <p>Hacerlo con 3 servicios.</p>
+    <p>Crear un programa que tome la orden de compra de un local.</p>
+    <p>Pedir al usuario que ingrese la cantidad que desea comprar de tres productos distintos, uno por uno, mostrar el valor total de la compra y preguntar en cuántas cuotas desea realizar el pago.</p>
+    <p>Mostrar un mensaje final con el detalle y el valor total la compra, cantidad de cuotas y valor de cada una de las cuotas.</p>
+    <p>Los precios de los productos deben estar definidos de antemano en variable.</p>
   </main>
   <!-- FOOTER -->
   <footer>
     <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
-  <script src="./js/gastos.js"></script>
+  <script src="./js/orden-compra.js"></script>
 </body>
 </html>
