agrego css al index principal y el index de la practica 1

--- a/index.html
+++ b/index.html
@@ -29,25 +29,15 @@
       <h1>Bienvenidos a mis practicas</h1>
     </header>
   <!-- MAIN -->
-  <main>
-    <section class="clase1">
-      <a href="./clase01/index.html">Clase 1</a>
-    </section>
-    <section class="clase2">
-      <a href="./clase02/index.html">Clase 2</a>
-    </section>
-    <section class="clase3">
-      <a href="./clase03/index.html">Clase 3</a>
-    </section>
-    <section class="clase5">
-      <a href="./clase05/index.html">Clase 5</a>
-    </section>
-    <section class="clase7">
-      <a href="./clase07/index.html">Clase 7</a>
-    </section>
-    <section class="clase10">
-      <a href="./clase10/index.html">Clase 10</a>
-    </section>
+  <main id="main-page">
+    <div class="grid">
+      <div class="grid__item clase1"> <a href="./clase01/index.html">Clase 1</a></div>
+      <div class="grid__item clase2"><a href="./clase02/index.html">Clase 2</a></div>
+      <div class="grid__item clase3"><a href="./clase03/index.html">Clase 3</a></div>
+      <div class="grid__item clase5"><a href="./clase05/index.html">Clase 5</a></div>
+      <div class="grid__item clase7"><a href="./clase07/index.html">Clase 7</a></div>
+      <div class="grid__item clase10"><a href="./clase10/index.html">Clase 10</a></div>
+    </div>
   </main>
   <!-- FOOTER -->
   <footer>
