agrego link a clase 11

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div class="grid__item clase5"><a href="./clase05/index.html">Clase 5</a></div>
       <div class="grid__item clase7"><a href="./clase07/index.html">Clase 7</a></div>
       <div class="grid__item clase10"><a href="./clase10/index.html">Clase 10</a></div>
+      <div class="grid__item clase10"><a href="./clase11/index.html">Clase 11</a></div>
     </div>
   </main>
   <!-- FOOTER -->
