sigo practicando JS y funciones

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -69,13 +69,27 @@
         <p id="valueInputMultiply"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">dividir(a, b)</a></strong>: Crear una función dividir que tome como argumentos dos números y devuelva la suma de ellos.</p>
+        <p><strong><a href="#firstNumberDivide" >dividir(a, b)</a></strong>: Crear una función dividir que tome como argumentos dos números y devuelva la suma de ellos.</p>
         <p><code>dividir(12, 3) // 4</code></p>
+        <h4>Ingresa los números ENTEROS y hace click en el boton DIVIDIR</h4>
+        <label for="firstNumberDivide">Ingrese un primer numero: </label>
+        <input type="number" id="firstNumberDivide" > 
+        <label for="secondNumberDivide">Ingrese un segundo numero: </label>
+        <input type="number" id="secondNumberDivide" > 
+        <button type="button"  onclick="getValueInputToDivide()">DIVIDIR</button> 
+        <p id="valueInputDivide"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">esPar(numero)</a></strong>: Crear una función esPar que tome como argumento un número y devuelva true si dicho números es par o false si no lo es.</p>
+        <p><strong><a href="#firstNumberisEven">esPar(numero)</a></strong>: Crear una función esPar que tome como argumento un número y devuelva true si dicho números es par o false si no lo es.</p>
         <p><code>esPar(2) // true</code></p>
         <p><code>esPar(3) // false</code></p>
+        <h4>Ingresa los números ENTEROS y hace click en el boton ES PAR</h4>
+        <label for="firstNumberisEven">Ingrese un primer numero: </label>
+        <input type="number" id="firstNumberisEven" > 
+        <label for="secondNumberisEven">Ingrese un segundo numero: </label>
+        <input type="number" id="secondNumberisEven" > 
+        <button type="button"  onclick="getValueInputToIsEven()">ES PAR ?</button> 
+        <p id="valueInputDivide"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">esImpar(numero)</a></strong>: Crear una función esImpar que tome como argumento un número y devuelva true si dicho números es impar o false si no lo e.</p>
