--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </main>
   <!-- FOOTER -->
   <footer>
-    <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="../assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
+    <p>Practica realizada por <a href="http://www.linkedin.com/in/maríaeugeniacosta" target="_blank" rel="noopener noreferrer">María Eugenia Costa</a> para el curso <strong>Introduccion Front End</strong> en <img src="./assets/images/ada_logo_blanco.png" alt="Logo de Ada"></p>
   </footer>
   
 </body>
