agrego las funciones esPar esImpar

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -83,18 +83,21 @@
         <p><strong><a href="#firstNumberisEven">esPar(numero)</a></strong>: Crear una función esPar que tome como argumento un número y devuelva true si dicho números es par o false si no lo es.</p>
         <p><code>esPar(2) // true</code></p>
         <p><code>esPar(3) // false</code></p>
-        <h4>Ingresa los números ENTEROS y hace click en el boton ES PAR</h4>
-        <label for="firstNumberisEven">Ingrese un primer numero: </label>
+        <h4>Ingresa un número ENTERO y hace click en el boton ES PAR</h4>
+        <label for="firstNumberisEven">Ingrese un número: </label>
         <input type="number" id="firstNumberisEven" > 
-        <label for="secondNumberisEven">Ingrese un segundo numero: </label>
-        <input type="number" id="secondNumberisEven" > 
         <button type="button"  onclick="getValueInputToIsEven()">ES PAR ?</button> 
-        <p id="valueInputDivide"></p>
+        <p id="valueInputIsEven"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">esImpar(numero)</a></strong>: Crear una función esImpar que tome como argumento un número y devuelva true si dicho números es impar o false si no lo e.</p>
+        <p><strong><a href="#firstNumberisOdd">esImpar(numero)</a></strong>: Crear una función esImpar que tome como argumento un número y devuelva true si dicho números es impar o false si no lo es.</p>
         <p><code>esImpar(2) // false</code></p>
         <p><code>esImpar(3) // true</code></p>
+        <h4>Ingresa un número ENTERO y hace click en el boton ES IMPAR</h4>
+        <label for="firstNumberisOdd">Ingrese un número: </label>
+        <input type="number" id="firstNumberisOdd" > 
+        <button type="button"  onclick="getValueInputToIsOdd()">ES IMPAR ?</button> 
+        <p id="valueInputIsOdd"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">calcularAreaTriangulo(base, altura)</a></strong>:  Crear una función calcularAreaTriangulo que tome como argumentos la base y la altura de un triángulo y devuelva el área del mismosultado de la conversión en segundos.</p>
