sigo con las funciones

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -32,8 +32,8 @@
   <!-- MAIN -->
   <main class="main-clase11">
     <h2>Empezamos con <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
-    <h3>Te detallo las practicas realizadas:</h3>
-    <p>Haciendo click en los botones amarillos podes hacer la prueba del ejercicio que quieras.</p>
+    <h3>Te detallo las practicas realizadas con FUNCIONES:</h3>
+    <p>Completando con números en los recuadros y haciendo click en los botones podés ver la práctica en acción.</p>
     <ul>
       <li>
         <p><strong><a href="#firstNumberSum">sumar(a, b)</a></strong>: Crear una función sumar que tome como argumentos dos números y devuelva la suma de ellos. Ejemplo:</p> 
@@ -100,8 +100,15 @@
         <p id="valueInputIsOdd"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">calcularAreaTriangulo(base, altura)</a></strong>:  Crear una función calcularAreaTriangulo que tome como argumentos la base y la altura de un triángulo y devuelva el área del mismosultado de la conversión en segundos.</p>
+        <p><strong><a href="#firstNumberTriangle">calcularAreaTriangulo(base, altura)</a></strong>:  Crear una función calcularAreaTriangulo que tome como argumentos la base y la altura de un triángulo y devuelva el área del mismosultado de la conversión en segundos.</p>
         <p><code>calcularAreaTriangulo(3, 4) // 6</code></p>
+        <h4>Ingresa 2 números y hace click en el boton AREA TRIANGULO</h4>
+        <label for="firstNumberTriangle">Ingrese la BASE del triangulo: </label>
+        <input type="number" id="firstNumberTriangle" > 
+        <label for="secondNumberTriangle">Ingrese la ALTURA del triangulo: </label>
+        <input type="number" id="secondNumberTriangle" > 
+        <button type="button"  onclick="getValueInputAreaTriangle()">AREA TRIANGULO</button> 
+        <p id="valueInputAreaTriangle"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">gritar(str)</a></strong>: Crear una función gritar que tome como argumento un string y devuelva el mismo string con un signo de exclamación al principio y al final del mismo.</p>
