agrego la funcion gritar

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -111,8 +111,13 @@
         <p id="valueInputAreaTriangle"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">gritar(str)</a></strong>: Crear una función gritar que tome como argumento un string y devuelva el mismo string con un signo de exclamación al principio y al final del mismo.</p>
+        <p><strong><a href="#stringToScream">gritar(str)</a></strong>: Crear una función gritar que tome como argumento un string y devuelva el mismo string con un signo de exclamación al principio y al final del mismo.</p>
         <p><code>gritar('hola') // ¡hola!</code></p>
+        <h4>Ingresa una palabra y hace click en el boton ES GRITAR</h4>
+        <label for="stringToScream">Ingrese la palabra: </label>
+        <input type="text" id="stringToScream" > 
+        <button type="button"  onclick="getValueInputToScream()">GRITAR</button> 
+        <p id="valueInputScream"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">obtenerNombreCompleto(nombre, apellido)</a></strong>: Crear una función obtenerNombreCompleto que tome como argumento un nombre y un apellido y devuelva un string con la unión de ambos valores.</p>
