--- a/clase11/index.html
+++ b/clase11/index.html
@@ -113,15 +113,22 @@
       <li>
         <p><strong><a href="#stringToScream">gritar(str)</a></strong>: Crear una función gritar que tome como argumento un string y devuelva el mismo string con un signo de exclamación al principio y al final del mismo.</p>
         <p><code>gritar('hola') // ¡hola!</code></p>
-        <h4>Ingresa una palabra y hace click en el boton ES GRITAR</h4>
+        <h4>Ingresa una palabra y hace click en el boton GRITAR</h4>
         <label for="stringToScream">Ingrese la palabra: </label>
         <input type="text" id="stringToScream" > 
         <button type="button"  onclick="getValueInputToScream()">GRITAR</button> 
         <p id="valueInputScream"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">obtenerNombreCompleto(nombre, apellido)</a></strong>: Crear una función obtenerNombreCompleto que tome como argumento un nombre y un apellido y devuelva un string con la unión de ambos valores.</p>
+        <p><strong><a href="#firstName">obtenerNombreCompleto(nombre, apellido)</a></strong>: Crear una función obtenerNombreCompleto que tome como argumento un nombre y un apellido y devuelva un string con la unión de ambos valores.</p>
         <p><code>obtenerNombreCompleto('Ada', 'Lovelace') // 'Ada Lovelace'</code></p>
+        <h4>Ingresa el nombre y apellido y hace click en el boton NOMBRE COMPLETO</h4>
+        <label for="firstName">Ingrese el nombre: </label>
+        <input type="text" id="firstName" > 
+        <label for="lastName">Ingrese el apellido: </label>
+        <input type="text" id="lastName" > 
+        <button type="button"  onclick="getValueInputFullName()">NOMBRE COMPLETO</button> 
+        <p id="valueInputFullName"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">saludar(nombre)</a></strong>: Crear una función saludar que tome como argumentos un nombre y devuelva un saludo que lo incluya.</p>
